--- a/css/ysl_web_sub01_tab.css
+++ b/css/ysl_web_sub01_tab.css
@@ -145,9 +145,21 @@ div.cntWrap>div.content.cnt02>div.section{
     margin-top: 40px;
 }
 div.cntWrap>div.content.cnt02>div.section>div.artView>div.artGroup{
-    width: 104%;
+    width: 107%;
 }
-div.cntWrap>div.content.cnt02>div.section>div.artView>div.artGroup>div.article>div.image{
+div.cntWrap>div.content.cnt02>div.section>div.artView>div.artGroup>div.article>div.image.i1{
+    height: 400px;
+}
+div.cntWrap>div.content.cnt02>div.section>div.artView>div.artGroup>div.article>div.image.i2{
+    height: 400px;
+}
+div.cntWrap>div.content.cnt02>div.section>div.artView>div.artGroup>div.article>div.image.i3{
+    height: 400px;
+}
+div.cntWrap>div.content.cnt02>div.section>div.artView>div.artGroup>div.article>div.image.i4{
+    height: 400px;
+}
+div.cntWrap>div.content.cnt02>div.section>div.artView>div.artGroup>div.article>div.image.i5{
     height: 400px;
 }
 div.cntWrap>div.content.cnt02>div.section>div.artView>div.artGroup>div.article{
@@ -162,7 +174,7 @@ div.cntWrap>div.content.cnt02>div.section>div.artView>div.artGroup>div.article:n
 }
 div.cntWrap>div.content.cnt02>div.section>div.artView>div.artGroup>div.article>div.texts{
     font-size: 14px;
-    
+    margin-top: -80px; 
 }
 div.cntWrap>div.content.cnt02>div.section>div.artView>div.artGroup>div.article:nth-child(4)>div.texts:nth-child(2)>h5:nth-child(1){
     padding: 0px 10px;
@@ -180,16 +192,16 @@ div.cntWrap>div.content.cnt02>div.section>div.artView>div.btns>div.btn>i:hover{
     font-size: 40px;
 }
 div.cntWrap>div.content.cnt02>div.section>div.artView>div.btns>div.btn:nth-child(1){
-    top: 280px;
+    top: 170px;
 }
 div.cntWrap>div.content.cnt02>div.section>div.artView>div.btns>div.btn:nth-child(2){
-    top: 280px;
+    top: 170px;
 }
 div.cntWrap>div.content.cnt02>div.section>div.artView>div.btns>div.btn:nth-child(1){
-    left: 149px;
+    left: 184px;
 }
 div.cntWrap>div.content.cnt02>div.section>div.artView>div.btns>div.btn:nth-child(2){
-    right: 168px;
+    right: 188px;
 }
 
 /* 푸터 */
