--- a/css/ysl_web_main_mobile.css
+++ b/css/ysl_web_main_mobile.css
@@ -126,11 +126,15 @@ div.cntWrap>div.content.cnt01>div.section>div.article>div.image.i2{
     height: 300px;
 }
 div.cntWrap>div.content.cnt01>div.section>div.btns{
-    width: calc(100% / 4 * 4);
+    width: 100%;
 }
-div.cntWrap>div.content.cnt01>div.section>div.btns>div.btn{
-    margin-top: -150px;
+div.cntWrap>div.content.cnt01>div.section>div.btns>div.btn:nth-child(1){
     width: calc(100% / 4 * 0.5);
+    margin-top: -150px;
+}
+div.cntWrap>div.content.cnt01>div.section>div.btns>div.btn:nth-child(2){
+    width: calc(100% / 4 * 0.5);
+    margin-top: -150px;
 }
 div.cntWrap:nth-child(4){
     display: none;
