--- a/css/ysl_web_sub02_mobile.css
+++ b/css/ysl_web_sub02_mobile.css
@@ -65,6 +65,9 @@ div.cntWrap>div.content.cnt02>div.section>div.article>div.image.i3{
 div.cntWrap>div.content.cnt02>div.section>div.article>div.image.i4{
     height: 240px;
 }
+div.cntWrap>div.content.cnt02>div.section>div.article>div.image.i5{
+    height: 240px;
+}
 div.cntWrap>div.content.cnt02>div.section>div.article>div.texts{
     font-size: 18px;
     padding-left: 5px;
