--- a/css/ysl_web_main.css
+++ b/css/ysl_web_main.css
@@ -655,6 +655,16 @@ div.ftrWrap>div.footer>div.info>div.sns{
 }
 div.ftrWrap>div.footer>div.info>div.sns>i{
     margin-right: 10px;
+    cursor: pointer;
+    position: relative;
+}
+div.ftrWrap>div.footer>div.info>div.sns>i>a:link{
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0px;
 }
 div.ftrWrap>div.footer>div.leftCorp{
     width: calc(100% / 12 * 4);
