--- a/css/ysl_web_sub02.css
+++ b/css/ysl_web_sub02.css
@@ -579,6 +579,19 @@ div.ftrWrap>div.footer>div.info>div.sns{
     line-height: 40px;
     font-size: 40px;
 }
+div.ftrWrap>div.footer>div.info>div.sns>i{
+    margin-right: 10px;
+    cursor: pointer;
+    position: relative;
+}
+div.ftrWrap>div.footer>div.info>div.sns>i>a:link{
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0px;
+}
 div.ftrWrap>div.footer>div.leftCorp{
     float: left;
     width: calc(100% / 3);
