--- a/css/ysl_web_main_mobile.css
+++ b/css/ysl_web_main_mobile.css
@@ -51,7 +51,7 @@ div.mainWrap>div.main>div.images>div.rightImg>div.image.i1{
     height: 300px;
 }
 div.mainWrap>div.main>div.images>div.leftImg>div.image>div.texts{
-    padding: 40px 80px 0px 80px;
+    padding-top: 40px;
 }
 div.mainWrap>div.main>div.images>div.leftImg>div.image>div.texts>h3{
     font-size: 28px;
@@ -66,10 +66,10 @@ div.mainWrap>div.main>div.images>div.leftImg>div.image>div.texts>h5:nth-child(3)
 }
 div.mainWrap>div.main>div.images>div.leftImg>div.image>div.texts>div.btn{
     margin-top: 30px;
-    width: calc(100% / 4 * 3);
+    width: calc(100% / 4 * 2);
 }
 div.mainWrap>div.main>div.images>div.rightImg>div.image.i1>div.texts{
-    padding: 70px 80px 0px 70px;
+    padding-top: 70px;
 }
 div.mainWrap>div.main>div.images>div.rightImg>div.image.i1>div.texts>h4{
     font-size: 16px;
@@ -81,7 +81,7 @@ div.mainWrap>div.main>div.images>div.rightImg>div.image.i1>div.texts>h3{
 }
 div.mainWrap>div.main>div.images>div.rightImg>div.image.i1>div.texts>div.btn{
     margin-top: 40px;
-    width: calc(100% / 4 * 3);
+    width: calc(100% / 4 * 2);
 }
 
 /* 컨텐츠 */
